--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -7,7 +7,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Growtopia Player Support</title>
+        <title>Elytra Player Backend</title>
         <link
             rel="icon"
             type="image/png"
@@ -90,7 +90,7 @@
                                                                 class="section-title center-align"
                                                             >
                                                                 <h2>
-                                                                    Welcome To GTPS
+                                                                    Welcome To ELYTRAPS
                                                                 </h2>
 
                                                             </div>
@@ -120,7 +120,7 @@
                                                                             <input
                                                                                 id="login-name"
                                                                                 class="form-control grow-text"
-                                                                                placeholder="Your GTPS Name *"
+                                                                                placeholder="Your ELYTRAID *"
                                                                                 name="growId"
                                                                                 type="text"
                                                                             />
@@ -131,7 +131,7 @@
                                                                             <input
                                                                                 id="password"
                                                                                 class="form-control grow-text"
-                                                                                placeholder="Your GTPS Password *"
+                                                                                placeholder="Your ELYTRA Pass *"
                                                                                 name="password"
                                                                                 type="password"
                                                                                 value=""
@@ -161,7 +161,7 @@
 <input
                                                                                 class="btn btn-lg btn-primary grow-button"
                                                         type="submit"
-                                                                                value="Don't have any GrowID? Register here!"
+                                                                                value="Don't have ELYTRAID? Register here!"
                                                                             />
 </form>
                       
